--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,16 @@ apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
 cordapp {
+    signing {
+        enabled true
+        options {
+            keystore = 'hecong.keystore'
+            alias = 'keypair01'
+            storepass = 'keystorepass'
+            keypass = 'keypairpass'
+            storetype = 'JKS'
+        }
+    }
     info {
         name "CorDapp Template"
         vendor "Corda Open Source"
@@ -90,6 +100,16 @@ dependencies {
 }
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
+    signing {
+        enabled true
+        options {
+            keystore = 'hecong.keystore'
+            alias = 'keypair01'
+            storepass = 'keystorepass'
+            keypass = 'keypairpass'
+            storetype = 'JKS'
+        }
+    }
     nodeDefaults {
         projectCordapp {
             deploy = false
