update to corda 4.3 oss. 自己署名手順追加

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,28 @@
 buildscript {
+    Properties constants = new Properties()
+    file("$projectDir/./constants.properties").withInputStream { constants.load(it) }
+
     ext {
-        corda_release_group = 'net.corda'
-        corda_release_version = '4.1'
-        corda_gradle_plugins_version = '4.0.45'
-        junit_version = '4.12'
-        quasar_version = '0.7.10'
+
+        corda_release_group = constants.getProperty("cordaReleaseGroup")
+        corda_release_version = constants.getProperty("cordaVersion")
+        corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
+        kotlin_version = constants.getProperty("kotlinVersion")
+        junit_version = constants.getProperty("junitVersion")
+        quasar_version = constants.getProperty("quasarVersion")
+        log4j_version = constants.getProperty("log4jVersion")
+        slf4j_version = constants.getProperty("slf4jVersion")
+        corda_platform_version = constants.getProperty("platformVersion").toInteger()
+        //springboot
         spring_boot_version = '2.0.2.RELEASE'
         spring_boot_gradle_plugin_version = '2.0.2.RELEASE'
-        slf4j_version = '1.7.25'
-        log4j_version = '2.11.2'
-        corda_platform_version = '4'.toInteger()
     }
 
     repositories {
         mavenLocal()
         mavenCentral()
         jcenter()
-        maven { url 'https://software.r3.com/artifactory/corda' }
+        maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases' }
     }
 
     dependencies {
@@ -28,6 +34,7 @@ buildscript {
 }
 
 allprojects {
+    apply from: "${rootProject.projectDir}/repositories.gradle"
     apply plugin: 'java'
 
     repositories {
@@ -46,6 +53,7 @@ allprojects {
         // This makes the JAR's SHA-256 hash repeatable.
         preserveFileTimestamps = false
         reproducibleFileOrder = true
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
 
@@ -53,25 +61,6 @@ allprojects {
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
-
-cordapp {
-    signing {
-        enabled true
-        options {
-            keystore = 'hecong.keystore'
-            alias = 'keypair01'
-            storepass = 'keystorepass'
-            keypass = 'keypairpass'
-            storetype = 'JKS'
-        }
-    }
-    info {
-        name "CorDapp Template"
-        vendor "Corda Open Source"
-        targetPlatformVersion corda_platform_version
-        minimumPlatformVersion corda_platform_version
-    }
-}
 
 sourceSets {
     main {
@@ -82,8 +71,6 @@ sourceSets {
 }
 
 dependencies {
-    testCompile "junit:junit:$junit_version"
-
     // Corda dependencies.
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
     cordaCompile "$corda_release_group:corda-node-api:$corda_release_version"
@@ -96,10 +83,9 @@ dependencies {
     cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
     cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
     cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
-
 }
-
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
+cordapp {
+    /*====以下必須ではない、Cordapp署名必要な場合、以下を追加=======*/
     signing {
         enabled true
         options {
@@ -110,6 +96,29 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
             storetype = 'JKS'
         }
     }
+    /*=================END==============================*/
+    info {
+        name "CorDapp Template"
+        vendor "Corda Open Source"
+        targetPlatformVersion corda_platform_version
+        minimumPlatformVersion corda_platform_version
+    }
+}
+// deployNodesの設定以下を参考してください
+// https://docs.corda.r3.com/generating-a-node.html?highlight=deploynodes#the-cordform-task
+task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
+    /*====以下必須ではない、Cordapp署名必要な場合、以下を追加=======*/
+    signing {
+        enabled true
+        options {
+            keystore = 'hecong.keystore'
+            alias = 'keypair01'
+            storepass = 'keystorepass'
+            keypass = 'keypairpass'
+            storetype = 'JKS'
+        }
+    }
+    /*=================END==============================*/
     nodeDefaults {
         projectCordapp {
             deploy = false
@@ -156,6 +165,7 @@ task installQuasar(type: Copy) {
         rename 'quasar-core(.*).jar', 'quasar.jar'
     }
 }
+
 task initDB(type: Exec) {
     commandLine 'cmd', '/c', 'psql -d postgres -U postgres -f ','lib/init.sql'
 }
