RPC 認証認可設定（DBから参照） **table作成 **初期ユーザー設定

--- a/lib/PartyA.conf
+++ b/lib/PartyA.conf
@@ -8,3 +8,20 @@ dataSourceProperties = {
     dataSource.user = "partya"
     dataSource.password = 123123
 }
+security {
+    authService = {
+        dataSource = {
+            type = "DB"
+            passwordEncryption = "SHIRO_1_CRYPT"
+            connection = {
+               driverClassName = "org.postgresql.ds.PGSimpleDataSource"
+               jdbcUrl = "jdbc:postgresql://localhost:5432/postgres?currentSchema=partya"
+               username = "partya"
+               password = "123123"
+            }
+        }
+    }
+}
+sshd {
+    port = 2222
+}
